[package]
name = "t1"
version = "0.1.1"
description = "A matrix moderation bot build on Matrix-Rust-SDK, Ractor, and Tokio"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
matrix-sdk = "0.10.0"
rand = "0.9.0"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
xflags = "0.3.2"

[dependencies.ractor]
version = "0.14.0"
default-features = false
features = ["tokio_runtime"]

[dependencies.tokio]
version = "1.40.0"
features = ["rt-multi-thread", "signal"]
