[package]
name = "t1bot"
version = "0.1.1"
description = "A matrix moderation bot build on Matrix-Rust-SDK, Ractor, and Tokio"
keywords = ["matrix", "moderation", "tokio", "ractor"]
repository = "https://github.com/kanru/t1"
license = "MIT OR Apache-2.0"
edition = "2024"
resolver = "3"

[dependencies]
anyhow = "1.0.89"
matrix-sdk = "0.13.0"
rand = "0.9.0"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
xflags = "0.3.2"

[dependencies.ractor]
version = "0.15.1"
default-features = false
features = ["tokio_runtime"]

[dependencies.tokio]
version = "1.44.2"
features = ["rt-multi-thread", "signal"]
